Fixed pagination spacing issue.

--- a/app/assets/stylesheets/dataTables.bootstrap.css
+++ b/app/assets/stylesheets/dataTables.bootstrap.css
@@ -40,6 +40,16 @@ div.dataTables_paginate ul.pagination {
 	white-space: nowrap;
 }
 
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    padding : 0px;
+    margin-left: 0px;
+    display: inline;
+    border: 0px;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+    border: 0px;
+}
+
 @media screen and (max-width: 767px) {
 	div.dataTables_length,
 	div.dataTables_filter,
